Include bin folder

--- a/ScanProcess/ScanProcess.csproj
+++ b/ScanProcess/ScanProcess.csproj
@@ -75,6 +75,8 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="bin\Debug\ScanProcess.exe.config" />
+    <None Include="bin\Release\ScanProcess.exe.config" />
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -85,6 +87,18 @@
     <EmbeddedResource Include="ProjectInstaller.resx">
       <DependentUpon>ProjectInstaller.cs</DependentUpon>
     </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="bin\Debug\Newtonsoft.Json.dll" />
+    <Content Include="bin\Debug\Newtonsoft.Json.xml" />
+    <Content Include="bin\Debug\ScanProcess.exe" />
+    <Content Include="bin\Debug\ScanProcess.pdb" />
+    <Content Include="bin\Debug\VirusTotal.NET.dll" />
+    <Content Include="bin\Release\Newtonsoft.Json.dll" />
+    <Content Include="bin\Release\Newtonsoft.Json.xml" />
+    <Content Include="bin\Release\ScanProcess.exe" />
+    <Content Include="bin\Release\ScanProcess.pdb" />
+    <Content Include="bin\Release\VirusTotal.NET.dll" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
